注册功能的实现

--- a/front_end_pc/register.html
+++ b/front_end_pc/register.html
@@ -23,6 +23,7 @@
                 <a href="/login.html">登录</a>
             </div>
             <div class="reg_form clearfix" id="app" v-cloak>
+                <!-- @submit v-on:submit跳转到js文件中的on_submit中来-->
                  <form method="post" @submit.prevent="on_submit">
                     
                     <ul>
