短信功能实现

--- a/front_end_pc/register.html
+++ b/front_end_pc/register.html
@@ -59,6 +59,7 @@
                             <label>短信验证码:</label>
                             <input type="text" v-model="sms_code" @blur="check_sms_code" name="sms_code" id="msg_code"
                                    class="msg_input">
+                            <!--该处会触发send_sms_code事件在js中的-->
                             <a @click="send_sms_code" class="get_msg_code">{{ sms_code_tip }}</a>
                             <span class="error_tip" v-show="error_sms_code">{{ error_sms_code_message }}</span>
                         </li>
